@@ -11,18 +11,6 @@ select:not([multiple]) {
  background: url(data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20version%3D%221.1%22%20x%3D%2212px%22%20y%3D%220px%22%20width%3D%2224px%22%20height%3D%225px%22%20viewBox%3D%220%200%206%203%22%20enable-background%3D%22new%200%200%206%203%22%20xml%3Aspace%3D%22preserve%22%20fill%3D%22%23fff%22%3E%3Cpolygon%20points%3D%225.992%2C0%202.992%2C3%20-0.008%2C0%20%22/%3E%3C/svg%3E) no-repeat right 0px top 14px;
 }
 
-input[type="submit"]:hover, input[type="button"]:hover, input[type="submit"]:focus, input[type="button"]:focus, .msk-dir-btn:hover, .msk-dir-btn:focus {
- background-color: #5F5F5F;
-}
-
-input[type="submit"]:active, input[type="button"]:active {
- background-color: #6F6F6F;
-}
-
-input[type="submit"], input[type="button"] {
- border:1px solid rgba(237, 236, 231, 0.25);
-}
-
 :root {
  --range-trough-color:#5a5a5a;
  --border-color:#5a5a5a;
